sumo/tests/sumo/extended/simulation_routing/assignment/errors/unknown_taz/errors.sumo
Error: Source district '1' not known for '0'!
Error: Vehicle's '0' route has no edges.
Quitting (on error).
